# simpleshell

./: CMakeLists.txt  README.md  config.h.in
CMakeModules/: FindFPC.cmake
doc/: CMakeLists.txt  Doxyfile.in
include/cli/: .cli.hpp.swp  auxiliary.hpp  base.hpp  base_parser.hpp  basic_spirit.hpp  boost_parser_adapter.hpp  boost_parser_base.hpp  callbacks.hpp  chart_literal.hpp  cli.hpp  command.hpp  dl.hpp  exception.hpp  exceptions.hpp  glob.hpp  internals.hpp  parser.hpp  parsers.hpp  prettyprint.hpp  readline.hpp  shell.hpp  shell_parser.hpp  simple.hpp  simple_parser.hpp  simple_shell_parser.hpp  standard.hpp  traits.hpp  utility.hpp  words.hpp
include/cli/detail/: prettyprint.hpp  utility.hpp
src/: CMakeLists.txt  cli-wrapper.cpp  cli-wrapper.h  cliwrapper.pas  main.c  main.cpp  main.pas
src/cli/: CMakeLists.txt  auxiliary.cpp  basic_spirit.cpp  cli.cpp  command.cpp  dl.cpp  fileno.cpp  fileno.hpp  glob.cpp  internals.cpp  prettyprint.cpp  readline.cpp  shell.cpp  shell_parser.cpp  simple.cpp  simple_parser.cpp  utility.cpp  words.cpp
src/system/: CMakeLists.txt
